[package]
name = "e-rewriter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "eggenv"
crate-type = ["cdylib"]   # 生成 Python 扩展模块的关键

[dependencies]
egg = "0.9.5"
num = "0.4.0"
rand = "0.8"
ndarray = "0.15.4"
ndarray-rand = "0.14.0"
anyhow = "1.0.98"
pyo3 = { version = "0.19", features = ["extension-module"] }

[source.crates-io]
replace-with = "tuna"

[source.tuna]
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"